--- a/TargetPortal/TargetPortal.csproj
+++ b/TargetPortal/TargetPortal.csproj
@@ -132,6 +132,6 @@
     </Target>
     -->
     <Target Name="Copy" AfterTargets="ILRepack">
-        <Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;$(GamePath)\BepInEx\plugins\$(AssemblyName).dll&quot;"/>
+        <Exec Command="copy /Y &quot;$(TargetDir)$(AssemblyName).dll&quot; &quot;$(ProjectDir)\..\..\Mods\$(AssemblyName).dll&quot;"/>
     </Target>
 </Project>
